# stock_spider

./: .gitignore  README.md  Research_Report.md  mypy.ini  poc_depth_test.py  poc_real_server_test.py  poc_tdx_minute.py  pyproject.toml  research_report_tdx_minute_data.md  tmp_debug.py
.trae/documents/: browser_crawl_implementation_plan.md  eastmoney_crawl_implementation_plan.md  eastmoney_crawl_remaining_plan.md  eastmoney_crawl_research_plan.md  playwright_llm_integration_plan.md  prd_plan.md  smart_search_detailed_plan.md  smart_search_improvement_plan.md  smart_search_playwright_plan.md  stock_crawler_srs.md
.trae/rules/: python 代码编写规则.md  用户编码规范与重构指南.md
config/: db_config.json  import_config.json  trade_calendar.json
docs/: eastmoney_crawl_research_report.md  functional_test_guide.md  tdx_research_report.md  ths_data_import_design.md  ths_research_report.md  tickflow_research_report.md
docs/codex/: project_directory_research.md
docs/prd/: Original requirement.md  stock_spider_prd.md
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_schema.py
sql/: database_upgrade_plan.md  ths_kline_schema.sql
tests/functional_test_case/: poc_a_share_price_limit.py  poc_a_share_rules_verify.py  poc_akshare_api.py  poc_akshare_quick.py  poc_baostock.py  poc_baostock_extra.py  poc_drissionpage_basic.py  poc_eastmoney.py  poc_eastmoney_api_discovery.py  poc_eastmoney_link_discovery.py  poc_em_block_trade.py  poc_em_browser_datacenter.py  poc_em_f10.py  (+32 more)
tools/: check_open_zero.py  check_status.py  import_ths_kline.py  init_db.py  validate_import.py
(+140 files in other folders)
